# huffman-archiver

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  README.md  arch  archiver.cpp  archiver.h  build.sh  main.cpp  readme.md  run_benchmarks.sh  vim.txt
.github/workflows/: cmake.yml
archiver/: CMakeLists.txt  archiver.cpp  archiver.h  compressor.cpp  compressor.h  decompressor.cpp  decompressor.h
archiver/tests/: archiver_tests.cpp
benchmarks/: WarAndPeace.txt  log.txt
binary_trie/: CMakeLists.txt  binary_trie.cpp  binary_trie.h
priority_queue/: CMakeLists.txt  priority_queue.h
priority_queue/tests/: priority_queue_tests.cpp
reader/: CMakeLists.txt  base_reader.h  file_reader.cpp  file_reader.h  reader.cpp  reader.h
reader/tests/: reader_tests.cpp
tests/: archiver_tests.cpp  priority_queue_tests.cpp  reader_tests.cpp  tests.cpp  writer_tests.cpp
tests/mock/sample/: amogus.txt
trie/: CMakeLists.txt  trie.cpp  trie.h
utils/: CMakeLists.txt  command_line_arguments_parser.cpp  command_line_arguments_parser.h  exception.h  extract_filename.cpp  extract_filename.h
writer/: CMakeLists.txt  base_writer.h  file_writer.cpp  file_writer.h  writer.cpp  writer.h
writer/tests/: writer_tests.cpp
